input zoom on mobile fix

--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -10,7 +10,7 @@
   width: 100%;
   max-width: 20rem;
   color: $color-black;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
   max-height: 4rem;
 
@@ -33,7 +33,7 @@
   }
 
   button {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-family: "Roboto", sans-serif;
     border: none;
     height: 4rem;
